--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+    margin:auto;
+    padding:2em;
+    background-color: #f5f5f5;
+}
+
 td {
     border: 2px solid black;
     padding:10px;
